# bearly

./: README.md  meson.build
src/bearly/: bearly_ext.cc  types.hpp
src/bearly/computations/: numeric.hpp
subprojects/: nanoarrow.wrap  nanobind.wrap
tests/: test_bearly.py
